--- a/public/index.html
+++ b/public/index.html
@@ -25,8 +25,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.1.0/react.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.1.0/react-dom.min.js"></script>
+    <script src="https://kit.fontawesome.com/790b1aaa71.js" crossorigin="anonymous"></script>
     
     <title>Le Livre Scolaire</title>
   </head>
